--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite --host localhost --port 5173",
-        "dev:fixed": "vite --host localhost --port 5173"
+        "dev": "vite"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
